# ffbar

./: .gitignore  .ocamlformat  Dockerfile  Makefile  README.md  dune-project  ffbar.opam
.github/workflows/: ci.yml  release.yml
lib/: dune  ffbar.ml  ffbar.mli
test/: Test_parsing.input  dune  test_ffbar.ml
